tests/expectations/compiler/constants/local_shadowing_fail.out
Error [EAST0372009]: variable `HELLO` shadowed by
    --> compiler-test:10:23
     |
  10 |                 const HELLO:u8 = 1u8;
     |                       ^^^^^
